--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_hooks: ^0.21.3+1
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.2.1
   freezed_annotation: ^3.1.0
   hooks_riverpod: ^3.0.1
   intl: ^0.20.2
