--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,47 +10,47 @@ environment:
   flutter: ">=3.24.0"
 
 dependencies:
-  auto_route: ^10.1.2
-  change_app_package_name: ^1.5.0
-  cupertino_icons: ^1.0.8
-  dio: ^5.9.0
-  drift: ^2.29.0
-  drift_flutter: ^0.2.7
+  auto_route: ^10.1.2 # gestion de las rutas
+  cupertino_icons: ^1.0.8 # iconos de cupertino
+  dio: ^5.9.0 # manejo de peticiones http
+  drift: ^2.29.0 # manejo de la base de datos
+  drift_flutter: ^0.2.7 # manejo de la base de datos en flutter
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.21.3+1
+  flutter_hooks: ^0.21.3+1 # hooks para flutter
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^2.2.1
-  freezed_annotation: ^3.1.0
-  fuzzy: ^0.5.1
-  hooks_riverpod: ^3.0.1
-  intl: ^0.20.2
-  json_annotation: ^4.9.0
-  path_provider: ^2.1.5
-  riverpod_annotation: ^3.0.1
-  riverpod_lint: ^3.0.1
-  talker: ^5.0.1
-  talker_flutter: ^5.0.1
+  flutter_native_splash: ^2.4.7 # manejo del splash screen
+  flutter_svg: ^2.2.1 # manejo de los svg
+  freezed_annotation: ^3.1.0 # manejo de los freezed
+  fuzzy: ^0.5.1 # manejo de la búsqueda fuzzy
+  hooks_riverpod: ^3.0.1 # manejo de los providers
+  intl: ^0.20.2 # manejo de la internacionalización
+  json_annotation: ^4.9.0 # manejo de los json
+  path_provider: ^2.1.5 # manejo de la ruta del archivo
+  riverpod_annotation: ^3.0.1 # manejo de los providers
+  riverpod_lint: ^3.0.1 # manejo de los lint
+  talker: ^5.0.1 # manejo de los logs
+  talker_flutter: ^5.0.1 # manejo de los logs en flutter
 
 dev_dependencies:
-  auto_route_generator: ^10.1.2
-  build_runner: ^2.7.1
-  custom_lint: ^0.8.0
-  drift_dev: ^2.29.0
-  flutter_gen_runner: ^5.12.0
-  flutter_lints: ^6.0.0
+  auto_route_generator: ^10.1.2 # generador de las rutas
+  build_runner: ^2.7.1 # runner de las build
+  custom_lint: ^0.8.0 # lint de las custom
+  drift_dev: ^2.29.0 # drift dev
+  flutter_gen_runner: ^5.12.0 # runner de los gen
+  flutter_launcher_icons: "^0.14.4" # iconos de la app
+  flutter_lints: ^6.0.0 # lint de flutter
   flutter_test:
     sdk: flutter
-  freezed: ^3.2.3
-  json_serializable: ^6.11.1
-  mocktail: ^1.0.4
-  riverpod_generator: ^3.0.1
+  freezed: ^3.2.3 # freezed
+  json_serializable: ^6.11.1 # json serializable
+  mocktail: ^1.0.4 # mocktail
+  riverpod_generator: ^3.0.1 # generator de los providers
 
 flutter:
   generate: true
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/icons/
@@ -62,12 +62,6 @@ flutter:
         - asset: assets/fonts/poppins/Poppins-Italic.ttf
         - asset: assets/fonts/poppins/Poppins-Medium.ttf
         - asset: assets/fonts/poppins/Poppins-Bold.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  # Configuración de ARB para l10n
 flutter_intl:
   enabled: true
 
@@ -79,3 +73,23 @@ flutter_gen:
     enabled: true
     outputs:
       directory_path_enabled: true
+  
+flutter_native_splash:
+  android: true
+  ios: true
+
+  color_dark: "#1A1A1A"
+  color: "#FAFAFA"
+  image: "assets/images/splash_logo.png"
+
+  android_12:
+    color_dark: "#1A1A1A"
+    color: "#FAFAFA"
+    image: "assets/images/android_splash_logo.png"
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 
